# hGnucash

./: .gitignore  hGnucash.cabal  stack.yaml
src/: GnuCashParser.hs  Ledger.hs  Main.hs  Test.hs  Types.hs
