name:                hGnucash
author:              Anja Berens
maintainer:          pharaun666@gmail.com
copyright:           (c) Anja Berens
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
category:            Finance
synopsis:            Library for working with gnucash xml files for massaging the contained data.
homepage:            https://github.com/pharaun/hGnucash
-- description:
extra-source-files:  README.rst

source-repository head
  type:     git
  location: https://github.com/pharaun/hGnucash.git
  branch:   master

executable hGnucash
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -rtsopts
  hs-source-dirs:      src
  build-depends:       base >=4.5 && <4.8
                     , bytestring >= 0.10
                     , text >= 1.2.0.0
                     , mtl
                     , pipes
                     , pretty
                     , stm
                     , transformers >=0.4 && <0.5
                     , errors >= 1.4.0
                     , safe >= 0.3
                     , exceptions >= 0.6
                     , optparse-applicative
                     , hexpat
                     , hexpat-pickle
